--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,15 +10,19 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "importHelpers": true,
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
+    "strictBindCallApply": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@database/*": ["./database"]
+      "tslib": ["./node_modules/tslib/tslib.d.ts"],
+      "@database/*": ["src/database/*"],
+      "@entities/*": ["src/common/entities/*"],
+      "@common/*": ["src/common/*"]
     }
   }
 }
